@startuml course-work
scale 1.2
left to right direction

skinparam monochrome true
skinparam shadowing false
skinparam backgroundColor white
skinparam defaultFontColor black

skinparam ranksep 0.9
skinparam nodesep 0.8
skinparam linetype ortho

hide empty members
hide circle
hide stereotype
skinparam classAttributeIconSize 0
skinparam classVisibilityIconSize 0

skinparam class {
    AttributeFontSize 9
    FontSize 10
    Padding 6
    BackgroundColor white
    BorderColor black
    ArrowColor black
    BorderThickness 1
}
skinparam defaultFontSize 10

' ================== СУЩНОСТИ (Entities) ==================

class AbstractProduct {
    - name : string
    - category : string
    - quantity : int
    - unitPrice : double
    + getName() : string
    + getCategory() : string
    + getQuantity() : int
    + getUnitPrice() : double
    + setName(name : string)
    + setCategory(category : string)
    + setQuantity(quantity : int)
    + setUnitPrice(unitPrice : double)
    + {abstract} calculateTotalValue() : double
    + {abstract} getProductType() : string
}

class Product {
    - id : int
    + Product(name, category, quantity, unitPrice)
    + getId() : int
    - setId(id : int)
    + calculateTotalValue() : double
    + getProductType() : string
}

AbstractProduct <|-- Product

class "ProductRepository<T>" as ProductRepositoryT {
    - products : vector<shared_ptr<T>>
    - productMap : map<int, shared_ptr<T>>
    + add(product : shared_ptr<T>) : void
    + remove(id : int) : void
    + findById(id : int) : shared_ptr<T>
    + findAll() : vector<shared_ptr<T>>
    + filter(pred : Predicate) : vector<shared_ptr<T>>
    + sortByName() : void
    + sortByPrice() : void
    + sortByQuantity() : void
    + sortByCategory() : void
    + searchByName(name : string) : vector<shared_ptr<T>>
    + searchByCategory(category : string) : vector<shared_ptr<T>>
    + size() : size_t
    + empty() : bool
    + clear() : void
    + calculateTotalInventoryValue() : double
}

class OrderItem {
    + productId : int
    + productName : QString
    + category : QString
    + quantity : int
    + unitPrice : double
    + discountPercent : double
    + totalPrice : double
    + calculateTotal(discount : double) : void
}

enum OrderType {
    RETAIL
    WHOLESALE
}

class Order {
    - id : int
    - companyName : QString
    - contactPerson : QString
    - phone : QString
    - orderType : OrderType
    - orderDate : QDate
    - items : vector<OrderItem>
    - totalAmount : double
    - totalDiscount : double
    + getId() : int
    + getCompanyName() : QString
    + getContactPerson() : QString
    + getPhone() : QString
    + getOrderType() : OrderType
    + getOrderDate() : QDate
    + getItems() : const vector<OrderItem>&
    + getTotalAmount() : double
    + getTotalDiscount() : double
    + setCompanyName(name : QString)
    + setContactPerson(contact : QString)
    + setPhone(phone : QString)
    + setOrderType(type : OrderType)
    + setOrderDate(date : QDate)
    + setId(id : int)
    + addItem(item : OrderItem)
    + removeItem(productId : int)
    + updateItemQuantity(productId : int, quantity : int)
    + clearItems()
    + calculateTotal() : void
    + getOrderTypeString() : QString
}

Order *-- OrderItem

' ================== СЕРВИСЫ ==================

class InventoryService {
    - products : vector<shared_ptr<Product>>
    - writeOffHistory : vector<shared_ptr<Product>>
    + addProduct(product : shared_ptr<Product>) : void
    + updateProduct(id : int, product : shared_ptr<Product>) : void
    + deleteProduct(id : int) : void
    + getProduct(id : int) : shared_ptr<Product>
    + getAllProducts() : vector<shared_ptr<Product>>
    + writeOffProduct(id : int, quantity : int) : void
    + addStock(id : int, quantity : int) : void
    + getWriteOffHistory() : const vector<shared_ptr<Product>>&
    + calculateTotalInventoryValue() : double
    + getTotalQuantity() : int
    + getTotalProductCount() : int
    + filterByCategory(category : string) : vector<shared_ptr<Product>>
}

class WriteOffCalculator {
    + calculateWriteOffValue(product : Product, quantity : int) : double
    + calculateTotalWriteOffValue(products : vector<shared_ptr<Product>>) : double
}

class WriteOffService {
    + writeOffProduct(inventory : InventoryService,
                      db : DatabaseManager*,
                      productId : int,
                      quantity : int,
                      productName : QString) : WriteOffService::Result
}

class WriteOffService::Result {
    + writeOffValue : double
    + dbRecordSaved : bool
}

class InventoryAdjustmentService {
    + applyAdjustment(inventory : InventoryService,
                      db : DatabaseManager*,
                      id : int,
                      currentQty : int,
                      actualQty : int,
                      result : InventoryAdjustmentService::Result) : void
}

class InventoryAdjustmentService::Result {
    + itemsUpdated : int
    + quantityAdded : int
    + quantityWrittenOff : int
}

class ProductFilterService {
    + filterProducts(inventory : InventoryService,
                     category : QString,
                     searchText : QString)
      : vector<shared_ptr<Product>>
}

class ProductValidator {
    + isIdInRange(id : int) : bool
    + isIdUnique(inventory : InventoryService, id : int) : bool
    + validateId(inventory : InventoryService, id : int) : QString
}

class OrderService {
    + createOrder(inventory : InventoryService,
                  db : DatabaseManager,
                  order : Order) : OrderService::Result
}

class OrderService::Result {
    + saved : bool
    + totalAmount : double
}

class DiscountCalculator {
    + calculateDiscount(isWholesale : bool, quantity : int) : double
}

InventoryService --> Product
WriteOffService --> InventoryService
WriteOffService --> DatabaseManager
WriteOffService --> WriteOffCalculator
WriteOffService --> WriteOffService::Result
InventoryAdjustmentService --> InventoryService
InventoryAdjustmentService --> WriteOffService
InventoryAdjustmentService --> InventoryAdjustmentService::Result
ProductFilterService --> InventoryService
ProductValidator --> InventoryService
OrderService --> InventoryService
OrderService --> Order
OrderService --> DatabaseManager
OrderService --> OrderService::Result
DiscountCalculator --> OrderItem

' ================== ДАННЫЕ / МЕНЕДЖЕРЫ ==================

class DatabaseManager {
    + getInstance() : DatabaseManager*
    + initializeDatabase() : bool
    + connect() : bool
    + disconnect() : void
    + isConnected() : bool
    + products() : ProductDataStore&
    + orders() : OrderDataStore&
    + writeOffs() : WriteOffDataStore&
}

class WriteOffRecord {
    + id : int
    + productId : int
    + productName : string
    + quantity : int
    + value : double
}

class ProductDataStore {
    + addProduct(product : Product) : bool
    + updateProduct(product : Product) : bool
    + deleteProduct(id : int) : bool
    + getProduct(id : int) : Product
    + getAllProducts() : vector<Product>
    + searchProductsByName(name : QString) : vector<Product>
    + searchProductsByCategory(category : QString) : vector<Product>
}

class OrderDataStore {
    + addOrder(order : Order) : bool
    + updateOrder(order : Order) : bool
    + deleteOrder(id : int) : bool
    + getOrder(id : int) : Order
    + getAllOrders() : vector<Order>
    + getOrdersByCompany(companyName : QString) : vector<Order>
    + getOrdersByType(type : OrderType) : vector<Order>
    + getOrdersByDateRange(startDate : QDate, endDate : QDate) : vector<Order>
}

class WriteOffDataStore {
    + addWriteOffRecord(productId : int, quantity : int,
                        value : double, productName : QString) : bool
    + getWriteOffHistory() : vector<QStringList>
}

DatabaseManager *-- ProductDataStore
DatabaseManager *-- OrderDataStore
DatabaseManager *-- WriteOffDataStore

ProductDataStore --> Product
OrderDataStore --> Order
WriteOffDataStore --> WriteOffRecord

class FileManager {
    + saveToBinary(inventory : InventoryService, filename : string) : bool
    + loadFromBinary(inventory : InventoryService, filename : string) : bool
    + exportReportToText(inventory : InventoryService, filename : string) : bool
    + exportWriteOffHistoryToText(inventory : InventoryService,
                                  filename : string) : bool
}

FileManager --> InventoryService

' ================== UI ==================

class MainWindow {
    - inventoryManager : InventoryService*
    - dbManager : DatabaseManager*
    + addProduct() : void
    + writeOffProductByRow(row : int) : void
    + createOrder() : void
    + createInventorySection() : QWidget*
    + createOrdersSection() : QWidget*
    + createReportsSection() : QWidget*
}

class ProductDialog
class WriteOffDialog
class OrderDialog
class ReportDialog

class InventoryDialog
class AddProductToOrderDialog
class SalesReportDialog
class ActionsDelegate
class ProductModel

class InventoryDialog::InventoryItem {
    + id : int
    + name : QString
    + category : QString
    + currentQuantity : int
    + actualQuantity : int
    + unitPrice : double
}

MainWindow --> ProductDialog
MainWindow --> WriteOffDialog
MainWindow --> OrderDialog
MainWindow --> ReportDialog

MainWindow --> InventoryDialog
MainWindow --> SalesReportDialog
MainWindow --> ActionsDelegate
MainWindow --> ProductModel

MainWindow --> InventoryService
MainWindow --> DatabaseManager
MainWindow --> WriteOffService
MainWindow --> InventoryAdjustmentService
MainWindow --> ProductFilterService
MainWindow --> ProductValidator
MainWindow --> OrderService
MainWindow --> FileManager

OrderDialog --> Order
OrderDialog --> Product
OrderDialog --> AddProductToOrderDialog
ReportDialog --> InventoryService

InventoryDialog *-- InventoryDialog::InventoryItem
InventoryDialog --> InventoryService
AddProductToOrderDialog --> Product
ProductModel --> InventoryService
ActionsDelegate --> ProductModel

InventoryService --> ProductRepositoryT

@enduml